--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="btn_folder_en" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\btn_folder_en.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="sangah-logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\sangah-logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
